tests/script_errors/function_error_3/error.txt
Error: 
    1 | string::format(7, "snot", "badger")
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Runtime error in function string::format/3: expected 1st parameter to format to be a format specifier e.g. to print a number use `string::format("{{}}", 1)`